--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
         <h1>
             Hello SJC!
         </h1>
+        <figure>
+            <img 
+src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Mapping_collaborative_software_on_GitHub.png/1280px-Mapping_collaborative_software_on_GitHub.png"
+            height="400" width="720">
+
+            <figcaption>
+                GitHub worldwide.
+            </figcaption>
+        </figure>
+
+        <h2>
+            Need to hire some assistants!
+        </h2>
     </body>
+
+
 </html>
