--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@ src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Mapping_collabora
         <h2>
             Need to hire some assistants!
         </h2>
+		
+		<h2>
+            So many thoughts...
+			When is professor going to stop? Doing this live was such a bad idea...
+			Maybe I should pull the fire-alarm ...maybe that'll stop this...
+        </h2>
+		
     </body>
 
 
