--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Mapping_collabora
         <h2>
             Need to hire some assistants!
         </h2>
-		
+	<h2>
+	Ugh, please someone stop him or he will go on forever. Pull it Syed. I can't take it anymore.
+	</h2>		
 		<h2>
             So many thoughts...
 			When is professor going to stop? Doing this live was such a bad idea...
