--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Mapping_collabora
         </figure>
 
         <h2>
-            Need to hire some assistants!
+            Need to FIRE some assistants!
         </h2>
 	<h2>
 	Ugh, please someone stop him or he will go on forever. Pull it Syed. I can't take it anymore.
