--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@ src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Mapping_collabora
             So many thoughts...
 			When is professor going to stop? Doing this live was such a bad idea...
 			Maybe I should pull the fire-alarm ...maybe that'll stop this...
+		
         </h2>
+	
+		<h2>
+		I know right Adnan...even professor Salim is trying to stop him! 
+		</h2>
 		
     </body>
 
